trunk/Archive2/6d/1a45020724ce25/output
main.cpp:10:28: error: no member named 'remainder' in namespace 'std'
        return size - std::remainder(size, align);
                      ~~~~~^
1 error generated.
